[front-end] Fixed login page sizing on small screens

--- a/front-end/src/app/auth/login/login.component.scss
+++ b/front-end/src/app/auth/login/login.component.scss
@@ -10,7 +10,8 @@
   padding-left: 2%;
   padding-right: 2%;
   padding-top: 1%;
-  width: 400px;
+  max-width: 400px;
+  width: 80%;
 
   @include flat-shadow($color-core);
 
